content/browser/site_per_process_browsertest.h
@@ -7,6 +7,7 @@
 
 #include <string>
 
+#include "base/macros.h"
 #include "content/browser/web_contents/web_contents_impl.h"
 #include "content/public/test/content_browser_test.h"
 #include "content/shell/browser/shell.h"
@@ -33,6 +34,8 @@ class SitePerProcessBrowserTest : public ContentBrowserTest {
 
  private:
   FrameTreeVisualizer visualizer_;
+
+  DISALLOW_COPY_AND_ASSIGN(SitePerProcessBrowserTest);
 };
 
 }  // namespace content
